S18E11 is quality simpsons
Bearded French homer, Millhouse gets revenge, comic book bart, and mustaches abound.

--- a/episodes/season_18.yml
+++ b/episodes/season_18.yml
@@ -106,7 +106,7 @@ episodes:
     of Monte Cristo; Milhouse uses a gadget to get even with kids who've picked on
     him; comic hero Bart-Man searches for the villain who killed his parents.
   simpsonsworld_id: 283790915851
-  good: maybe
+  good: true
   characters:
 - title: Little Big Girl
   season: 18
