--- a/episodes/season_02.yml
+++ b/episodes/season_02.yml
@@ -4,7 +4,7 @@ episodes:
   season: 2
   episode: 1
   description: Bart must pass a critical history test or he will be held back a grade.
-  disneyplus_id:
+  disneyplus_id: 4050d194-f1a6-47d4-bc1b-76b8245ed113
   simpsonsworld_id: 260539459671
   good: false
   characters:
@@ -14,7 +14,7 @@ episodes:
   episode: 2
   description: Homer's life changes dramatically when he purchases a miracle hair
     growth formula.
-  disneyplus_id:
+  disneyplus_id: 243f60de-a36e-49ad-add0-dfc14531cafd
   simpsonsworld_id: 260539971564
   good: true
   characters:
@@ -24,7 +24,7 @@ episodes:
   episode: 3
   description: The Simpsons tell three bloodcurdling tales of horror on Halloween
     night.
-  disneyplus_id:
+  disneyplus_id: 4ec3dd31-0428-40c2-b1e0-b052dfc53fe0
   simpsonsworld_id: 260538435884
   good: true
   characters:
@@ -34,7 +34,7 @@ episodes:
   episode: 4
   description: Homer supports Mr. Burns in his bid for governor, but Marge remains
     loyal to Burns's political opposition.
-  disneyplus_id:
+  disneyplus_id: de06551c-30d7-44ef-b000-05e29c00eed6
   simpsonsworld_id: 260537411822
   good: true
   characters:
@@ -45,7 +45,7 @@ episodes:
   season: 2
   episode: 5
   description: Homer becomes the official mascot for a major league baseball team.
-  disneyplus_id:
+  disneyplus_id: ebf614c8-eefe-4cc3-8b26-d898f40faad0
   simpsonsworld_id: 260538435888
   good: true
   characters:
@@ -55,7 +55,7 @@ episodes:
   episode: 6
   description: Homer and Ned Flanders pressure their sons to win a miniature golf
     championship.
-  disneyplus_id:
+  disneyplus_id: 142af74a-1149-493c-ad2b-a283c98db66d
   simpsonsworld_id: 260539459670
   good: true
   characters:
@@ -67,7 +67,7 @@ episodes:
   episode: 7
   description: Bart learns the true meaning of Thanksgiving when he runs away from
     home after having an argument with Lisa.
-  disneyplus_id:
+  disneyplus_id: f4dc6ce1-cb9d-49e3-b4d4-2e5f50549812
   simpsonsworld_id: 260539459701
   good: false
   characters:
@@ -78,7 +78,7 @@ episodes:
   episode: 8
   description: Bart is determined to leap a gorge on his skateboard after witnessing
     the death defying stunts of a real daredevil.
-  disneyplus_id:
+  disneyplus_id: 9f790394-88b9-48ac-970c-18d32de46342
   simpsonsworld_id: 260539459702
   good: true
   characters:
@@ -88,7 +88,7 @@ episodes:
   episode: 9
   description: Marge initiates a protest movement against gratuitous violence on television
     when Maggie begins acting aggressively after viewing Itchy and Scratchy cartoons.
-  disneyplus_id:
+  disneyplus_id: fd366e91-bcd5-4629-83d9-6c6f6739897c
   simpsonsworld_id: 1094123075920
   good: true
   characters:
@@ -98,7 +98,7 @@ episodes:
   episode: 10
   description: When Mr. Burns hits Bart with his car, Homer is enticed by a disreputable
     lawyer to sue him.
-  disneyplus_id:
+  disneyplus_id: bf571705-b52b-46ae-a9c1-c88d36672839
   simpsonsworld_id: 260550723760
   good: true
   characters:
@@ -110,7 +110,7 @@ episodes:
   episode: 11
   description: Homer believes he has only twenty-four hours to live after he eats
     an improperly prepared blowfish.
-  disneyplus_id:
+  disneyplus_id: 28244e58-a5dd-4260-a8be-13e2a34d0ba9
   simpsonsworld_id: 260548675839
   good: true
   characters:
@@ -120,7 +120,7 @@ episodes:
   episode: 12
   description: Marge recounts to her children how she and Homer first met and fell
     in love.
-  disneyplus_id:
+  disneyplus_id: 1fd08344-aa39-42f3-a056-662aa4835f0f
   simpsonsworld_id: 260549187876
   good: false
   characters:
@@ -131,7 +131,7 @@ episodes:
   episode: 13
   description: Lisa disapproves when Homer has cable television installed illegally
     into their home.
-  disneyplus_id:
+  disneyplus_id: fb653641-23b8-4e9b-a547-0d195f78c33c
   simpsonsworld_id: 260820547692
   good: true
   characters:
@@ -142,7 +142,7 @@ episodes:
   episode: 14
   description: Homer arranges a date between Principal Skinner and Marge's sister,
     Selma.
-  disneyplus_id:
+  disneyplus_id: ce071635-1151-49b0-9168-eda9b55880fa
   simpsonsworld_id: 263496771968
   good: true
   characters:
@@ -154,7 +154,7 @@ episodes:
   episode: 15
   description: Homer locates his long lost half brother Herb and discovers that he
     is rich.
-  disneyplus_id:
+  disneyplus_id: 78ae94ea-6ac6-4d34-b1a9-031a324f447a
   simpsonsworld_id: 1094123587812
   good: false
   characters:
@@ -164,7 +164,7 @@ episodes:
   episode: 16
   description: Bart must help train Santa's Little Helper to pass an obedience course
     or Homer will give the dog away.
-  disneyplus_id:
+  disneyplus_id: ab2e3441-cb90-4cee-ab57-6f20fa1bfdac
   simpsonsworld_id: 272034883946
   good: true
   characters:
@@ -174,7 +174,7 @@ episodes:
   season: 2
   episode: 17
   description: Grampa Simpson falls in love... and inherits a fortune.
-  disneyplus_id:
+  disneyplus_id: b847307a-cb9d-494a-bb98-12a764168288
   simpsonsworld_id: 263504963955
   good: false
   characters:
@@ -185,7 +185,7 @@ episodes:
   description: Marge renews her interest in becoming an artist after Homer finds an
     old painting of Ringo Starr in the attic.  Mr. Burns commissions Marge to paint
     a portrait of him.
-  disneyplus_id:
+  disneyplus_id: 8cf507bf-2b25-45d7-84d4-e3f668a68f37
   simpsonsworld_id: 1094212163883
   good: true
   characters:
@@ -196,7 +196,7 @@ episodes:
   episode: 19
   description: Lisa develops a crush on her substitute teacher, Mr. Bergstrom.  Bergstrom
     tells Homer he must learn to act as a positive role model for his daughter.
-  disneyplus_id:
+  disneyplus_id: 33c5ea7a-09ac-4513-b471-29289dbbc1f9
   simpsonsworld_id: 288011331912
   good: true
   characters:
@@ -207,7 +207,7 @@ episodes:
   description: Marge insists Homer accompany her for a weekend of marriage counseling
     at a wooded retreat, but Homer takes advantage of the location to attempt to catch
     a legendary catfish.
-  disneyplus_id:
+  disneyplus_id: ac3d5ea1-e473-4a79-bfaf-a496a79b2a3b
   simpsonsworld_id: 272040003661
   good: true
   characters:
@@ -218,7 +218,7 @@ episodes:
   episode: 21
   description: Bart and his friends pool their money to purchase the first issue of
     "Radioactive Man" comics, but then cannot decide who gets to keep it.
-  disneyplus_id:
+  disneyplus_id: a1394377-1c23-458d-b91b-18ff12018d47
   simpsonsworld_id: 310368835964
   good: true
   characters:
@@ -230,7 +230,7 @@ episodes:
   episode: 22
   description: Homer expects a generous gift in return when he donates Bart's blood
     to an ailing Mr. Burns.
-  disneyplus_id:
+  disneyplus_id: cd94c4b6-8f87-4df0-b709-190eb4f84964
   simpsonsworld_id: 272041539932
   good: true
   characters:
