--- a/episodes/season_05.yml
+++ b/episodes/season_05.yml
@@ -5,7 +5,7 @@ episodes:
   episode: 1
   description: Homer recounts his phenomenal rise to superstardom as a member of the
     barbershop quartet, The Be Sharps.
-  disneyplus_id:
+  disneyplus_id: 39346307-4dbb-45e8-a765-4ed555bb1e03
   simpsonsworld_id: 305674307809
   good: false
   characters:
@@ -17,7 +17,7 @@ episodes:
   season: 5
   episode: 2
   description: Sideshow Bob terrorizes Bart after he is paroled from prison.
-  disneyplus_id:
+  disneyplus_id: 1640880f-154b-4c5e-94fe-cb86bb7e6970
   simpsonsworld_id: 305674819788
   good: true
   characters:
@@ -28,7 +28,7 @@ episodes:
   episode: 3
   description: Homer enrolls in a nuclear physics class at Springfield University
     and convinces three nerdy classmates to help him pull off a prank.
-  disneyplus_id:
+  disneyplus_id: 166f1ff9-be98-453d-a3cd-6d80943efff3
   simpsonsworld_id: 280399427649
   good: true
   characters:
@@ -37,7 +37,7 @@ episodes:
   season: 5
   episode: 4
   description: The Simpsons find Mr. Burns' long-lost childhood teddy bear.
-  disneyplus_id:
+  disneyplus_id: 39559a2c-6bec-48fc-b080-be4a7c3e4045
   simpsonsworld_id: 279714371653
   good: true
   characters:
@@ -48,7 +48,7 @@ episodes:
   episode: 5
   description: In a ghoulish gallery, Bart hosts three bloodcurdling tales of Halloween
     horror.
-  disneyplus_id:
+  disneyplus_id: 33dfa7a1-fe6f-4466-a87d-9bf43a8be7cd
   simpsonsworld_id: 275206211805
   good: true
   characters:
@@ -58,7 +58,7 @@ episodes:
   episode: 6
   description: Marge joins divorcee Ruth Powers for a wild night on the town, only
     to discover that her friend is driving a stolen vehicle.
-  disneyplus_id:
+  disneyplus_id: fd7b6365-b333-487e-8057-66544129d162
   simpsonsworld_id: 294777411510
   good: true
   characters:
@@ -68,7 +68,7 @@ episodes:
   episode: 7
   description: The host of a self-help workshop convinces the people of Springfield
     they should emulate Bart's uninhibited personality.
-  disneyplus_id:
+  disneyplus_id: eed49f33-ea03-401f-9afa-abc8591c290d
   simpsonsworld_id: 275202627817
   good: true
   characters:
@@ -78,7 +78,7 @@ episodes:
   episode: 8
   description: Bart inadvertently joins the Junior Campers, and during a rafting trip,
     he becomes lost at sea with Homer and Ned Flanders.
-  disneyplus_id:
+  disneyplus_id: 01cec0e3-c895-478a-ac26-e90a34cf7c32
   simpsonsworld_id: 288056387698
   good: true
   characters:
@@ -90,7 +90,7 @@ episodes:
   episode: 9
   description: Homer is attracted to a sexy co-worker with a personality identical
     to his own.
-  disneyplus_id:
+  disneyplus_id: 53840a89-3296-4b9d-bbbd-cb80eba9af3f
   simpsonsworld_id: 275201091952
   good: true
   characters:
@@ -100,7 +100,7 @@ episodes:
   episode: 10
   description: Marge becomes addicted to playing slot machines after the town of Springfield
     legalizes gambling.
-  disneyplus_id:
+  disneyplus_id: 129fb45a-e1f4-4f42-9abb-cd1e62a91eda
   simpsonsworld_id: 305659459565
   good: true
   characters:
@@ -111,7 +111,7 @@ episodes:
   episode: 11
   description: Homer takes the law into his own hands after Springfield is victimized
     by a cat burglar.
-  disneyplus_id:
+  disneyplus_id: 3f69d304-f5b4-4b72-aca9-cbc0395a0ee6
   simpsonsworld_id: 305677891810
   good: true
   characters:
@@ -121,7 +121,7 @@ episodes:
   episode: 12
   description: Bart becomes an instant celebrity after he ad-libs a line during a
     sketch on the "Krusty the Klown Show."
-  disneyplus_id:
+  disneyplus_id: 639a5d21-7c16-43fb-87ce-7df70e57177e
   simpsonsworld_id: 302789187885
   good: true
   characters:
@@ -132,7 +132,7 @@ episodes:
   episode: 13
   description: Apu offers the Simpsons his services as valet after he is fired from
     the Kwik-E-Mart for selling rancid meat.
-  disneyplus_id:
+  disneyplus_id: ae3d982a-e7ec-43fe-93dd-0884be9d751a
   simpsonsworld_id: 279716931614
   good: false
   characters:
@@ -142,7 +142,7 @@ episodes:
   season: 5
   episode: 14
   description: Lisa manufactures her own talking doll for little girls.
-  disneyplus_id:
+  disneyplus_id: a4153020-a361-466d-8c1e-dfdc32f43501
   simpsonsworld_id: 274260035625
   good: true
   characters:
@@ -152,7 +152,7 @@ episodes:
   episode: 15
   description: NASA scientists train Homer to become the first average American in
     space, with near disastrous results.
-  disneyplus_id:
+  disneyplus_id: 0743fa0a-ddd3-4591-96f1-1a419e19b30e
   simpsonsworld_id: 275720259883
   good: true
   characters:
@@ -162,7 +162,7 @@ episodes:
   season: 5
   episode: 16
   description: Flanders is horrified to discover he has become Homer's best friend.
-  disneyplus_id:
+  disneyplus_id: a7f65f67-17f0-483c-bd70-a15d4050d877
   simpsonsworld_id: 310398019629
   good: maybe
   characters:
@@ -170,7 +170,7 @@ episodes:
   season: 5
   episode: 17
   description: Bart wins a full grown African elephant as part of a radio contest.
-  disneyplus_id:
+  disneyplus_id: 980ff0ba-e78c-41cf-8e83-5b7a91f4d3c9
   simpsonsworld_id: 275726403611
   good: maybe
   characters:
@@ -178,7 +178,7 @@ episodes:
   season: 5
   episode: 18
   description: Mr. Burns chooses Bart as the heir to his vast fortune.
-  disneyplus_id:
+  disneyplus_id: c4e4a495-db5f-4fee-9314-0866330c664b
   simpsonsworld_id: 283747395787
   good: maybe
   characters:
@@ -187,7 +187,7 @@ episodes:
   episode: 19
   description: Bart suffers enormous guilt after Skinner is fired from his job as
     school principal.
-  disneyplus_id:
+  disneyplus_id: bedacca5-03b3-4b55-8fa6-7f542cd53e3a
   simpsonsworld_id: 274260035741
   good: true
   characters:
@@ -199,7 +199,7 @@ episodes:
   description: Only Bart can clear Mayor Quimby's nephew of an assault charge, but
     he fears that identifying himself as a witness will mean expulsion for skipping
     class.
-  disneyplus_id:
+  disneyplus_id: b151afad-24f5-457b-9457-26eb53022331
   simpsonsworld_id: 278796355962
   good: true
   characters:
@@ -210,7 +210,7 @@ episodes:
   episode: 21
   description: Grampa and Mr. Burns vie for Mrs. Bouvier's hand in marriage.  Bart
     purchases a worthless Itchy and Scratchy animation cell.
-  disneyplus_id:
+  disneyplus_id: e38cf670-0fdc-4ca8-9095-51296ffc7a16
   simpsonsworld_id: 305681987583
   good: maybe
   characters:
@@ -219,7 +219,7 @@ episodes:
   episode: 22
   description: Marge kicks Homer out of the house after she discovers that he revealed
     her personal secrets to an adult education class.
-  disneyplus_id:
+  disneyplus_id: e38cf670-0fdc-4ca8-9095-51296ffc7a16
   simpsonsworld_id: 279720003973
   good: true
   characters:
