--- a/episodes/season_06.yml
+++ b/episodes/season_06.yml
@@ -5,7 +5,7 @@ episodes:
   episode: 1
   description: Bart believes he witnessed Ned Flanders murder his wife.  Lisa's popularity
     soars after her family buys a swimming pool during a heat wave.
-  disneyplus_id:
+  disneyplus_id: e0db43b4-b127-4792-9ba6-caf3fdba9189
   simpsonsworld_id: 300925507538
   good: true
   characters:
@@ -18,7 +18,7 @@ episodes:
   description: Lisa becomes jealous when she meets a new student who is even more
     intelligent than herself.  Homer acquires a truckload of white sugar, thinking
     it will net him a fortune.
-  disneyplus_id:
+  disneyplus_id: 3c568ad6-485c-4d21-b020-38c786694561
   simpsonsworld_id: 278809667691
   good: false
   characters:
@@ -29,7 +29,7 @@ episodes:
   episode: 3
   description: When Marge suspects that romance has gone out of her life, her family
     recalls romantic encounters from their past.
-  disneyplus_id:
+  disneyplus_id: feda9375-d929-429a-9435-b1cd5d101222
   simpsonsworld_id: 300928067775
   good: false
   characters:
@@ -39,7 +39,7 @@ episodes:
   episode: 4
   description: The Simpsons visit a theme park based on the gratuitously violent Itchy
     and Scratchy cartoons.
-  disneyplus_id:
+  disneyplus_id: 916ceda9-c787-4d02-9b7f-dc39a0840d5d
   simpsonsworld_id: 283752003577
   good: true
   characters:
@@ -49,7 +49,7 @@ episodes:
   episode: 5
   description: Sideshow Bob runs for political office after Mayor Quimby pardons him
     from prison.
-  disneyplus_id:
+  disneyplus_id: 40520eb0-dffb-4f80-bb22-2ddb42f54b0c
   simpsonsworld_id: 275729987504
   good: true
   characters:
@@ -59,7 +59,7 @@ episodes:
   season: 6
   episode: 6
   description: The Simpsons spin three tales of Halloween horror.
-  disneyplus_id:
+  disneyplus_id: 956d5f58-9674-4f76-88de-b113d2318202
   simpsonsworld_id: 299597891663
   good: true
   characters:
@@ -69,7 +69,7 @@ episodes:
   episode: 7
   description: Bart falls in love with Reverend Lovejoy's beautiful daughter, only
     to discover that she is more of a hellion than he is.
-  disneyplus_id:
+  disneyplus_id: 62d263db-6b8c-4654-beda-040484e7235e
   simpsonsworld_id: 275744323759
   good: true
   characters:
@@ -79,7 +79,7 @@ episodes:
   episode: 8
   description: Lisa joins a hockey team and finds herself pitted against Bart in a
     critical game.
-  disneyplus_id:
+  disneyplus_id: e45f5161-1e73-455f-82ac-48e3d03a7e12
   simpsonsworld_id: 275746371575
   good: true
   characters:
@@ -89,7 +89,7 @@ episodes:
   season: 6
   episode: 9
   description: Homer is wrongly accused of committing sexual harassment.
-  disneyplus_id:
+  disneyplus_id: 48565484-149b-48f2-a05e-ebcd9b121782
   simpsonsworld_id: 275746883653
   good: true
   characters:
@@ -99,7 +99,7 @@ episodes:
   episode: 10
   description: While selling a homemade tonic guaranteed to increase sexual desire
     in men, Grampa reveals that Homer's conception was accidental.
-  disneyplus_id:
+  disneyplus_id: 7b7cd73e-4de3-40e8-bcbd-f7cee25bfa6f
   simpsonsworld_id: 274264643876
   good: true
   characters:
@@ -110,7 +110,7 @@ episodes:
   episode: 11
   description: Marge seeks professional help from a psychiatrist after realizing she
     is afraid to fly.
-  disneyplus_id:
+  disneyplus_id: 8575c33f-e73d-40a8-8fa2-c91b65a9710f
   simpsonsworld_id: 305684547546
   good: false
   characters:
@@ -120,7 +120,7 @@ episodes:
   episode: 12
   description: Homer's popularity skyrockets when he is chosen as the leader of a
     secret organization.
-  disneyplus_id:
+  disneyplus_id: d02227b3-65fd-4fa1-ad78-3a4d72fe1254
   simpsonsworld_id: 275745859881
   good: true
   characters:
@@ -129,7 +129,7 @@ episodes:
   season: 6
   episode: 13
   description: Homer recounts how Maggie's accidental birth changed his life forever.
-  disneyplus_id:
+  disneyplus_id: beb15b6c-0732-45f6-9455-ee8336f45f1d
   simpsonsworld_id: 278796867754
   good: false
   characters:
@@ -137,7 +137,7 @@ episodes:
   season: 6
   episode: 14
   description: Bart discovers a comet that is on a collision course with Springfield.
-  disneyplus_id:
+  disneyplus_id: ab06e7e0-8658-45f0-9e61-49e2a2a3f6cd
   simpsonsworld_id: 275746883888
   good: true
   characters:
@@ -146,7 +146,7 @@ episodes:
   season: 6
   episode: 15
   description: Homer enrolls in a clown college franchised by Krusty the Clown.
-  disneyplus_id:
+  disneyplus_id: 30a62635-7272-43d6-887a-d323236b492a
   simpsonsworld_id: 279723587611
   good: true
   characters:
@@ -157,7 +157,7 @@ episodes:
   episode: 16
   description: Bart must apologize to the country of Australia after he tricks a boy
     from down under into accepting an expensive collect call.
-  disneyplus_id:
+  disneyplus_id: 646ad7b7-2623-459e-9544-ded1ccaf6094
   simpsonsworld_id: 275748931680
   good: true
   characters:
@@ -167,7 +167,7 @@ episodes:
   episode: 17
   description: Homer is forced to borrow money from Patty and Selma after he wipes
     out the family's savings by investing in pumpkins.
-  disneyplus_id:
+  disneyplus_id: 2fa7626b-eabb-46b0-81e5-b9cb333b56f3
   simpsonsworld_id: 305686083529
   good: true
   characters:
@@ -179,7 +179,7 @@ episodes:
   episode: 18
   description: Homer grows jealous after Marge asks critic Jay Sherman to co-judge
     Springfield's film festival.
-  disneyplus_id:
+  disneyplus_id: 4f4aaa93-bfde-443c-9024-9cd1f217fced
   simpsonsworld_id: 283753539580
   good: true
   characters:
@@ -190,7 +190,7 @@ episodes:
   episode: 19
   description: A fortune teller describes how a genteel Englishman will ask for Lisa's
     hand in marriage in the year 2010.
-  disneyplus_id:
+  disneyplus_id: 9708a302-1343-4bbb-ba23-5a96255d8289
   simpsonsworld_id: 275751491511
   good: false
   characters:
@@ -200,7 +200,7 @@ episodes:
   episode: 20
   description: Bart and Lisa attempt to rescue 25 greyhound puppies from Mr. Burns,
     who wants to use their hides for a new tuxedo.
-  disneyplus_id:
+  disneyplus_id: b598df88-303d-4588-8cdc-08a6a1f1692d
   simpsonsworld_id: 278807107855
   good: true
   characters:
@@ -212,7 +212,7 @@ episodes:
   episode: 21
   description: Bart masterminds a teacher's strike, but is humiliated when Marge takes
     charge of his class.
-  disneyplus_id:
+  disneyplus_id: c00d65d6-2343-4870-bd41-3cbd2660273a
   simpsonsworld_id: 294780995610
   good: true
   characters:
@@ -223,7 +223,7 @@ episodes:
   episode: 22
   description: Lisa is saddened by the death of blues great Bleeding Gums Murphy.  Bart
     ingests a piece of jagged metal while eating Krusty-O cereal.
-  disneyplus_id:
+  disneyplus_id: a1d3d5ef-5c31-422e-8e6e-23f0c8d7dbea
   simpsonsworld_id: 275755587777
   good: true
   characters:
@@ -234,7 +234,7 @@ episodes:
   season: 6
   episode: 23
   description: Marge joins the police force.
-  disneyplus_id:
+  disneyplus_id: 055a8934-53ff-46e0-bd72-709db2c17b5a
   simpsonsworld_id: 305689155572
   good: true
   characters:
@@ -245,7 +245,7 @@ episodes:
   episode: 24
   description: Bart and his friends march on Shelbyville when Springfield's lemon
     tree is stolen by a gang of children from across the border.
-  disneyplus_id:
+  disneyplus_id: 02037b88-c8d8-4512-9ca3-08cfe7eba3c6
   simpsonsworld_id: 274269763684
   good: true
   characters:
@@ -257,7 +257,7 @@ episodes:
   description: Just about everyone in Springfield vows to kill Mr. Burns after he
     cheats the elementary school out of a newly discovered oil well and threatens
     to block out the sun.
-  disneyplus_id:
+  disneyplus_id: d4c01d16-1512-424e-bb7a-36c11398972f
   simpsonsworld_id: 294781507859
   good: true
   characters:
