--- a/episodes/season_07.yml
+++ b/episodes/season_07.yml
@@ -4,7 +4,7 @@ episodes:
   season: 7
   episode: 1
   description: Lisa aids police with the investigation of the Burns shooting.
-  disneyplus_id:
+  disneyplus_id: af6bd0ea-9f03-4291-9224-de834958b1a1
   simpsonsworld_id: 305689667892
   good: true
   characters:
@@ -13,7 +13,7 @@ episodes:
   episode: 2
   description: Hollywood producers cast Milhouse in a motion picture based on the
     popular "Radioactive Man" comic books.
-  disneyplus_id:
+  disneyplus_id: 2895e8ae-b98c-43e8-8da0-8015832768f6
   simpsonsworld_id: 305693251940
   good: true
   characters:
@@ -22,7 +22,7 @@ episodes:
   episode: 3
   description: The Flanders gain custody of the Simpson children after welfare workers
     accuse Homer and Marge of being negligent parents.
-  disneyplus_id:
+  disneyplus_id: 85ae1888-ba11-43e6-a617-badff0685aad
   simpsonsworld_id: 306174019869
   good: true
   characters:
@@ -31,7 +31,7 @@ episodes:
   episode: 4
   description: Bart sells his soul to Milhouse for five dollars.  Moe transforms his
     bar into a family restaurant.
-  disneyplus_id:
+  disneyplus_id: 9168c65f-2ea7-46de-aef9-14c518a5f597
   simpsonsworld_id: 276972099995
   good: true
   characters:
@@ -39,7 +39,7 @@ episodes:
   season: 7
   episode: 5
   description: Lisa turns vegetarian after her family visits a petting zoo.
-  disneyplus_id:
+  disneyplus_id: 18076697-c44b-4d5d-a4cd-e12fe07b924e
   simpsonsworld_id: 276980291592
   good: true
   characters:
@@ -47,7 +47,7 @@ episodes:
   season: 7
   episode: 6
   description: The Simpsons appear in three horrifying Halloween tales.
-  disneyplus_id:
+  disneyplus_id: 384c7808-cd8f-4908-a095-c3fedf955d37
   simpsonsworld_id: 310404163601
   good: true
   characters:
@@ -57,7 +57,7 @@ episodes:
   episode: 7
   description: Homer intentionally gains weight so he can qualify for disability and
     work at home.
-  disneyplus_id:
+  disneyplus_id: 3da929b8-51d7-483b-8007-540faa742efa
   simpsonsworld_id: 294786627843
   good: true
   characters:
@@ -66,7 +66,7 @@ episodes:
   episode: 8
   description: After Homer fakes his own death, his long-thought-deceased mother arrives
     in Springfield to pay her last respects.
-  disneyplus_id:
+  disneyplus_id: 79177d82-52a3-42e0-9f1a-74bebdb70a3b
   simpsonsworld_id: 276983875726
   good: true
   characters:
@@ -75,7 +75,7 @@ episodes:
   episode: 9
   description: Sideshow Bob threatens to detonate a nuclear bomb unless television
     is abolished.
-  disneyplus_id:
+  disneyplus_id: dd578c4e-b966-4039-9154-c49ebfc3fcc7
   simpsonsworld_id: 302792771516
   good: true
   characters:
@@ -84,7 +84,7 @@ episodes:
   episode: 10
   description: Troy McClure hosts this special 138th episode, which includes the first-ever
     cartoon shorts, trivia questions, and never-before-seen footage.
-  disneyplus_id:
+  disneyplus_id: bf91c3f9-c130-4b40-9c0a-d106bee437da
   simpsonsworld_id: 324451395934
   good: true
   characters:
@@ -93,7 +93,7 @@ episodes:
   episode: 11
   description: As Christmas approaches, Marge treats Bart like an adult after he is
     caught shoplifting.
-  disneyplus_id:
+  disneyplus_id: c75d20a0-48e3-4e3f-b420-51b13527decf
   simpsonsworld_id: 305669699710
   good: true
   characters:
@@ -103,7 +103,7 @@ episodes:
   description: Homer reluctantly accepts Mr. Burns into his new bowling league.  Bart
     causes a student riot by wearing a Mad magazine iron-on prompting Skinner to implement
     a school dress code.
-  disneyplus_id:
+  disneyplus_id: db3b4bed-0e2b-493b-928a-23a8a3b829d2
   simpsonsworld_id: 302792771967
   good: true
   characters:
@@ -112,7 +112,7 @@ episodes:
   episode: 13
   description: Former President George Bush and his wife Barbara buy a house across
     the street from the Simpsons.
-  disneyplus_id:
+  disneyplus_id: 6d3f90dd-4441-4a21-873b-2b856aae503c
   simpsonsworld_id: 276994115834
   good: true
   characters:
@@ -120,7 +120,7 @@ episodes:
   season: 7
   episode: 14
   description: The Simpsons apply for membership at a posh country club.
-  disneyplus_id:
+  disneyplus_id: 69f3b82f-c910-4c58-a378-cc18fe23587a
   simpsonsworld_id: 305694276001
   good: true
   characters:
@@ -129,7 +129,7 @@ episodes:
   episode: 15
   description: Krusty is arrested for massive tax fraud after Bart inadvertently exposes
     his hero's illegal bank account.
-  disneyplus_id:
+  disneyplus_id: 22adc89c-f2e8-4380-9d96-bd10defc0ddd
   simpsonsworld_id: 301346371709
   good: true
   characters:
@@ -138,7 +138,7 @@ episodes:
   episode: 16
   description: Lisa discovers that Jebediah Springfield was a vicious pirate. Homer
     wins the coveted role of town crier in an upcoming parade.
-  disneyplus_id:
+  disneyplus_id: 3c98cfc8-ba9f-4dd9-8fdf-9bc0f5f63b8f
   simpsonsworld_id: 302796355658
   good: true
   characters:
@@ -146,7 +146,7 @@ episodes:
   season: 7
   episode: 17
   description: Homer acts as Mr. Burns' assistant while Smithers is away on vacation.
-  disneyplus_id:
+  disneyplus_id: c2fc5c37-1407-47bc-a71a-a6fa30688127
   simpsonsworld_id: 277248579634
   good: true
   characters:
@@ -155,7 +155,7 @@ episodes:
   episode: 18
   description: Bart and Lisa come to the aid of a down-and-out man who claims to have
     invented the concept of cartoon violence.
-  disneyplus_id:
+  disneyplus_id: cdf89f39-7954-4823-bd0f-e59a508cfd84
   simpsonsworld_id: 301668931982
   good: true
   characters:
@@ -163,7 +163,7 @@ episodes:
   season: 7
   episode: 19
   description: Troy McClure stages a Hollywood comeback when he begins dating Selma.
-  disneyplus_id:
+  disneyplus_id: d479707a-067a-49c9-a707-1360c0e001e1
   simpsonsworld_id: 300935235544
   good: true
   characters:
@@ -173,7 +173,7 @@ episodes:
   description: Using a fake driver's license, Bart rents a car and embarks on a Spring
     Break road trip with his friends.  A special bond develops between Lisa and Homer
     after Skinner invents Go To Work With Your Parents Day.
-  disneyplus_id:
+  disneyplus_id: e79fc0c4-b737-4bdd-b9e3-74228b08850e
   simpsonsworld_id: 277000259951
   good: true
   characters:
@@ -182,7 +182,7 @@ episodes:
   episode: 21
   description: The lives of Springfield residents are highlighted in a series of interconnecting
     vignettes.
-  disneyplus_id:
+  disneyplus_id: 7a4eea69-f6f0-4361-a043-0282f15c365a
   simpsonsworld_id: 299588163608
   good: true
   characters:
@@ -192,7 +192,7 @@ episodes:
   episode: 22
   description: Grampa and Mr. Burns, the last surviving members of a World War II
     army unit, vie for a priceless collection of rare art hidden in a secret location.
-  disneyplus_id:
+  disneyplus_id: 83a53166-960e-4b09-808c-93e6556722bd
   simpsonsworld_id: 279728707597
   good: true
   characters:
@@ -201,7 +201,7 @@ episodes:
   episode: 23
   description: Apu faces deportation when a referendum on illegal immigrants is placed
     on the Springfield ballot.
-  disneyplus_id:
+  disneyplus_id: 1195725c-d1c9-4ff1-bd37-0c652fda5309
   simpsonsworld_id: 310404675978
   good: true
   characters:
@@ -209,7 +209,7 @@ episodes:
   season: 7
   episode: 24
   description: Homer is hired to perform in a rock festival.
-  disneyplus_id:
+  disneyplus_id: 75b8b572-9e2d-40b5-8424-5b943d15fd75
   simpsonsworld_id: 277008451637
   good: true
   characters:
@@ -218,7 +218,7 @@ episodes:
   episode: 25
   description: While on summer vacation with her family, Lisa sheds her nerdy image
     in an effort to make new friends.
-  disneyplus_id:
+  disneyplus_id: 964b876c-efaa-483f-bf8b-047187608d95
   simpsonsworld_id: 277013571573
   good: true
   characters:
