--- a/episodes/season_08.yml
+++ b/episodes/season_08.yml
@@ -6,7 +6,7 @@ episodes:
   description: 'The Simpsons appear in three tales of terror: Bart discovers an evil
     twin brother living in the attic; Lisa creates a microscopic society; and space
     aliens transform themselves into Clinton and Dole look-alikes.'
-  disneyplus_id:
+  disneyplus_id: 50a03393-e5f7-4a07-b0a2-538ab3b16b51
   simpsonsworld_id: 299625027835
   good: true
   characters:
@@ -16,7 +16,7 @@ episodes:
   episode: 2
   description: The Simpsons relocate to another community after Homer unwittingly
     takes a job with a company controlled by a super-villain.
-  disneyplus_id:
+  disneyplus_id: 4bbad88a-4a1b-4881-9c0e-b78d8c703e7d
   simpsonsworld_id: 306390595776
   good: true
   characters:
@@ -25,7 +25,7 @@ episodes:
   episode: 3
   description: Homer becomes a professional boxer when doctors discover he was born
     with a unique genetic condition that protects his brain from injury.
-  disneyplus_id:
+  disneyplus_id: 13979608-127b-4a93-b1ee-1fbd178019fd
   simpsonsworld_id: 288058947803
   good: true
   characters:
@@ -33,7 +33,7 @@ episodes:
   season: 8
   episode: 4
   description: With Homer's help, Mr. Burns' long-lost son stages his own kidnapping.
-  disneyplus_id:
+  disneyplus_id: f8925031-3dda-44a5-8210-d0241c05795b
   simpsonsworld_id: 299622467514
   good: false
   characters:
@@ -42,7 +42,7 @@ episodes:
   episode: 5
   description: While Marge is out of town, Homer allows Bart to work at a burlesque
     house.
-  disneyplus_id:
+  disneyplus_id: 992e892f-0acd-4d25-8e40-fef5704efc7b
   simpsonsworld_id: 294789699801
   good: true
   characters:
@@ -51,7 +51,7 @@ episodes:
   episode: 6
   description: When Milhouse's parents get a divorce, Homer grows convinced that his
     own marriage is in jeopardy.
-  disneyplus_id:
+  disneyplus_id: 25482c78-0e90-4a23-96b0-edfc4215514e
   simpsonsworld_id: 277025347786
   good: true
   characters:
@@ -60,7 +60,7 @@ episodes:
   episode: 7
   description: Lisa develops a crush on bully Nelson Muntz.  Homer uses an automatic
     telephone dialer for an electronic panhandling scheme.
-  disneyplus_id:
+  disneyplus_id: c30d0b3b-b1df-4db7-a1e1-ef80cc750985
   simpsonsworld_id: 306394691862
   good: true
   characters:
@@ -68,7 +68,7 @@ episodes:
   season: 8
   episode: 8
   description: Ned Flanders suffers a breakdown after his home is destroyed by a hurricane.
-  disneyplus_id:
+  disneyplus_id: a8fca808-af99-4856-9bac-f94014e86dc5
   simpsonsworld_id: 436250179702
   good: true
   characters:
@@ -78,7 +78,7 @@ episodes:
   description: After ingesting several Guatemalan peppers during chili cook-off, Homer
     experiences hallucinatory visions that inspire him to find his true soul mate
     in life.
-  disneyplus_id:
+  disneyplus_id: ce212c73-6d9c-47a6-aba1-3703759fcfd0
   simpsonsworld_id: 436252739905
   good: true
   characters:
@@ -87,7 +87,7 @@ episodes:
   episode: 10
   description: X-Files Agents Mulder and Scully investigate Homer's encounter with
     an alleged extraterrestrial.
-  disneyplus_id:
+  disneyplus_id: 15802bc3-c0e2-4f05-bf59-e5a04c8e1ea3
   simpsonsworld_id: 436259395954
   good: true
   characters:
@@ -96,7 +96,7 @@ episodes:
   episode: 11
   description: After being expelled from an investment club, Marge starts her own
     pretzel franchise.
-  disneyplus_id:
+  disneyplus_id: f922ecd7-179a-497b-9fb0-dffb05aedfcf
   simpsonsworld_id: 436264515927
   good: true
   characters:
@@ -105,7 +105,7 @@ episodes:
   episode: 12
   description: Homer and Mr. Burns are buried beneath an avalanche during a survival
     trek in the mountains.
-  disneyplus_id:
+  disneyplus_id: 37a78fcb-f5de-424b-93d9-538f05e940c3
   simpsonsworld_id: 436267075791
   good: true
   characters:
@@ -114,7 +114,7 @@ episodes:
   episode: 13
   description: The Simpsons hire a Mary Poppins-like nanny when Marge becomes overwhelmed
     by the demands of being a housewife.
-  disneyplus_id:
+  disneyplus_id: 586feaa4-08b3-4847-a67b-604a7562dddc
   simpsonsworld_id: 436271683676
   good: true
   characters:
@@ -124,7 +124,7 @@ episodes:
   description: When ratings for Itchy & Scratchy cartoons plummet, a studio committee
     creates a new, hipper character and hires Homer to provide the voice. Presented
     by FXX.
-  disneyplus_id:
+  disneyplus_id: c44f10c9-3257-453f-9e5f-6394a07baf0f
   simpsonsworld_id: 436278339668
   good: true
   characters:
@@ -133,7 +133,7 @@ episodes:
   episode: 15
   description: Homer grows homophobic after he realizes the family's new friend is
     gay.
-  disneyplus_id:
+  disneyplus_id: 4f464b63-f2ef-4078-9ae1-e09951dd16b5
   simpsonsworld_id: 436284995621
   good: true
   characters:
@@ -143,7 +143,7 @@ episodes:
   description: Bart fears the worst when Sideshow Bob wins release from prison by
     claiming he is a reformed man and is hired by his brother to work on a construction
     project.
-  disneyplus_id:
+  disneyplus_id: 5124905d-7d18-4b4e-b381-a5d4f57807c6
   simpsonsworld_id: 436296259771
   good: true
   characters:
@@ -151,7 +151,7 @@ episodes:
   season: 8
   episode: 17
   description: Homer and Marge allow Lisa to baby-sit Bart.
-  disneyplus_id:
+  disneyplus_id: 9409fed1-b3b3-4345-88b6-a1c309774b44
   simpsonsworld_id: 436301891875
   good: false
   characters:
@@ -160,7 +160,7 @@ episodes:
   episode: 18
   description: Homer turns bootlegger when Springfield enforces an antiquated prohibition
     law.
-  disneyplus_id:
+  disneyplus_id: 17673fdc-6b4d-4bb2-8690-0065a74a84db
   simpsonsworld_id: 436402755605
   good: true
   characters:
@@ -168,7 +168,7 @@ episodes:
   season: 8
   episode: 19
   description: Bart exposes Skinner and Krabappel's clandestine affair.
-  disneyplus_id:
+  disneyplus_id: c1827569-0955-47d5-9351-c38c49ba8196
   simpsonsworld_id: 436412995642
   good: true
   characters:
@@ -177,7 +177,7 @@ episodes:
   episode: 20
   description: Bart gives away Santa's Little Helper so he can keep a fully trained,
     blue ribbon Collie.
-  disneyplus_id:
+  disneyplus_id: 18d4e6f6-2c26-4c3f-ae52-c1ad04e82851
   simpsonsworld_id: 436370499586
   good: false
   characters:
@@ -186,7 +186,7 @@ episodes:
   episode: 21
   description: Lisa helps Mr. Burns build a recycling center after a series of bad
     investments costs the multimillionaire his fortune.
-  disneyplus_id:
+  disneyplus_id: d62f4ce1-1bf2-44f2-ab83-9b6ad690873d
   simpsonsworld_id: 436383811985
   good: true
   characters:
@@ -195,7 +195,7 @@ episodes:
   episode: 22
   description: Marge becomes a church volunteer.  Homer discovers his image printed
     on a box of Japanese dish detergent.
-  disneyplus_id:
+  disneyplus_id: 472be34f-4238-4d11-9afe-ba5abf66c895
   simpsonsworld_id: 436438595644
   good: true
   characters:
@@ -204,7 +204,7 @@ episodes:
   episode: 23
   description: A resentful, hard-working employee at the power plant makes Homer his
     enemy.  Bart purchases an abandoned factory for one dollar at a government auction.
-  disneyplus_id:
+  disneyplus_id: 49a63595-ee7e-43fb-a7ef-bd79d439beef
   simpsonsworld_id: 436466755640
   good: true
   characters:
@@ -212,7 +212,7 @@ episodes:
   season: 8
   episode: 24
   description: Troy McClure hosts three spin-offs from "The Simpsons" television show.
-  disneyplus_id:
+  disneyplus_id: 879b67c1-b784-4bec-aa11-5da4aeab587d
   simpsonsworld_id: 436481091875
   good: false
   characters:
@@ -221,7 +221,7 @@ episodes:
   episode: 25
   description: Cadets give Lisa the "silent treatment" when she enrolls in an all-male
     military academy.
-  disneyplus_id:
+  disneyplus_id: 0344e1ff-8d98-42af-8f56-2dbf0a8ed0a8
   simpsonsworld_id: 1071844931909
   good: true
   characters:
